# phisql

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  mkdocs.yml  schema-README.md
.github/: RFC_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  rfc.yml
.github/workflows/: conformance.yml  docs.yml  reference.yml  validate.yml
compliance/: README.md  run.py
compliance/adapters/: reference-dotnet.sh  reference-python.sh  reference.sh
docs/: index.md
reference/: README.md  pom.xml
reference/dotnet/: .gitignore  README.md  RELEASE_NOTES.md  build.sh
reference/dotnet/PhiSql/: Ast.cs  Catalog.cs  Cli.cs  Compiler.cs  Errors.cs  Lexer.cs  Parser.cs  PhiSql.csproj  PolicySchema.cs  Resources.cs
reference/dotnet/PhiSql.Cli/: PhiSql.Cli.csproj  Program.cs
reference/dotnet/PhiSql.Tests/: CliTests.cs  CompileErrorTests.cs  ExamplesTests.cs  GrammarFeaturesTests.cs  LexerTests.cs  ParseErrorTests.cs  PhiSql.Tests.csproj  PolicyNamingTests.cs  PolicySchemaTests.cs  TestPaths.cs
reference/dotnet/scripts/: generate_parser.sh
reference/java/: README.md  RELEASE_NOTES.md  pom.xml
reference/python/: .gitignore  MANIFEST.in  README.md  RELEASE_NOTES.md  pyproject.toml  setup.py
reference/python/phisql/: __init__.py  __main__.py  _paths.py  ast.py  catalog.py  cli.py  compiler.py  errors.py  lexer.py  parser.py  phisql.py  policy_schema.py
reference/python/phisql/_generated/: PhiSQLLexer.py  PhiSQLListener.py  PhiSQLParser.py  PhiSQLVisitor.py  __init__.py
reference/python/scripts/: generate_parser.sh
reference/python/tests/: conftest.py  test_cli.py  test_compile_error.py  test_compiler.py  test_examples_complete.py  test_examples_parse.py  test_examples_schema.py  test_grammar_features.py  test_lexer.py  test_parse_error.py  test_policy_naming.py  test_policy_schema.py
rfcs/: 0001-scope-less-ignore-terms.md  0002-monitoring-query-verbs.md  0003-benchmarking-query-verbs.md  0004-cross-tool-join-semantics.md  0005-required-strategy-arguments.md  0006-date-only-strategies.md  README.md
schema/: README.md
schema/1.1.0/: schema.json
schema/1.2.0/: schema.json
scripts/: gen_docs.py  requirements.txt  validate_examples.py  validate_spec.py
scripts/tests/: test_arg_type_compatible.py
spec/v0.1/: SPEC.md
spec/v0.1/catalog/: entity-types.yaml  findings.yaml  keywords.yaml  policy.yaml  predicates.yaml  sources.yaml  strategies.yaml
spec/v0.1/examples/: 03-pci-dss-scope-reduction.phisql  04-frbp-9037.json  05-support-tickets-with-allowlist.json  06-multi-strategy-on-one-entity.phisql  07-format-preserving-encryption.json  08-multiple-confidence-thresholds.phisql  09-ignore-pattern-policy-wide.json  10-mask-with-format-argument.json  10-mask-with-format-argument.phisql  11-policy-wide-ignore-terms.json  11-policy-wide-ignore-terms.phisql  12-date-shift.json  12-date-shift.phisql  13-custom-identifier.phisql  14-pheye-person-detection.json  14-pheye-person-detection.phisql  15-crypto-encryption.json  15-crypto-encryption.phisql  17-scan-azure-blob.json  18-find-pii-local-filesystem.json  19-select-findings-groupby.phisql
spec/v0.1/grammar/: PhiSQL.ebnf  PhiSQL.g4
spec/v1.0/catalog/: entity-types.yaml  findings.yaml  keywords.yaml  policy.yaml  predicates.yaml  sources.yaml  strategies.yaml  validators.yaml
spec/v1.0/examples/: 01-ssn-only.json  01-ssn-only.phisql  02-hipaa-safe-harbor.json  02-hipaa-safe-harbor.phisql  04-frbp-9037.phisql  05-support-tickets-with-allowlist.phisql  06-multi-strategy-on-one-entity.json  07-format-preserving-encryption.phisql  08-multiple-confidence-thresholds.json  09-ignore-pattern-policy-wide.phisql  13-custom-identifier.json  15-find-pii-s3.json  15-find-pii-s3.phisql  16-discover-entities-gcs.json  16-discover-entities-gcs.phisql  17-scan-azure-blob.phisql  18-find-pii-local-filesystem.phisql  19-select-findings-groupby.json  19-select-findings-groupby.phisql  20-crypto-encryption.phisql  21-date-relative.json  21-date-relative.phisql  22-custom-dictionary.json  22-custom-dictionary.phisql  23-section-redaction.json  23-section-redaction.phisql  24-config-settings.json  24-config-settings.phisql  25-graphical-boundingbox.json  25-graphical-boundingbox.phisql  26-filter-options.json  26-filter-options.phisql  27-strategy-params.json  27-strategy-params.phisql  28-nested-options.json  28-nested-options.phisql
spec/v1.0/grammar/: PhiSQL.ebnf  PhiSQL.g4
spec/v1.1.0/examples/: identifier-validator.json  identifier-validator.phisql  pheye-local-model.json  pheye-local-model.phisql
spec/v1.2.0/examples/: component-ids.json  component-ids.phisql  ein.json  ein.phisql  generator-fallback.json  generator-fallback.phisql  map-replace-table.json  map-replace-table.phisql  pdf-strategy-color.json  pdf-strategy-color.phisql  phone-region.json  phone-region.phisql  span-disambiguation.json  span-disambiguation.phisql  splitting-overlap.json  splitting-overlap.phisql
v1.0/: 404.html  index.html  requirements.txt  sitemap.xml
v1.0/SUMMARY/: index.html
v1.0/examples/: index.html
v1.0/examples/01-ssn-only/: index.html
v1.0/examples/02-hipaa-safe-harbor/: index.html
v1.0/examples/03-pci-dss-scope-reduction/: index.html
v1.0/examples/04-frbp-9037/: index.html
v1.0/examples/05-support-tickets-with-allowlist/: index.html
v1.0/examples/06-multi-strategy-on-one-entity/: index.html
v1.0/examples/07-format-preserving-encryption/: index.html
v1.0/examples/08-multiple-confidence-thresholds/: index.html
v1.0/examples/09-ignore-pattern-policy-wide/: index.html
v1.0/examples/10-mask-with-format-argument/: index.html
v1.0/examples/11-policy-wide-ignore-terms/: index.html
v1.0/examples/12-date-shift/: index.html
v1.0/examples/13-custom-identifier/: index.html
v1.0/examples/14-pheye-person-detection/: index.html
v1.0/examples/15-find-pii-s3/: index.html
v1.0/examples/16-discover-entities-gcs/: index.html
v1.0/examples/17-scan-azure-blob/: index.html
v1.0/examples/18-find-pii-local-filesystem/: index.html
v1.0/examples/ein/: index.html
v1.0/search/: search_index.json
(+290 files in other folders)
