# Copyright 2026 Philterd, LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License").
# See ../../LICENSE.

[build-system]
# setuptools>=77 for PEP 639 SPDX `license` / `license-files` support.
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phisql"
# This is the implementation version and is independent of the redaction
# policy schema version (see phisql/policy_schema.py). Increment it freely for
# code-only changes.
version = "1.1.0"
description = "Python reference parser and compiler for the PhiSQL specification."
readme = "README.md"
requires-python = ">=3.9"
# PEP 639: SPDX expression plus the license file (copied in at build time by
# setup.py). The deprecated License classifier is intentionally omitted.
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Philterd, LLC", email = "support@philterd.ai" }]
keywords = ["phisql", "pii", "redaction", "deidentification", "phileas", "privacy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyYAML>=5.4",
    # The parser is generated from spec/v1.0/grammar/PhiSQL.g4 by ANTLR; this is
    # the runtime that loads it. The version must match ANTLR_VERSION in
    # scripts/generate_parser.sh (generated code only loads on its own runtime).
    "antlr4-python3-runtime==4.13.2",
]

[project.urls]
Homepage = "https://github.com/philterd/phisql"
Source = "https://github.com/philterd/phisql"
Issues = "https://github.com/philterd/phisql/issues"
Documentation = "https://philterd.github.io/phisql/"

[project.optional-dependencies]
test = ["pytest>=7.0", "jsonschema>=4.18.0"]

[project.scripts]
phisql = "phisql.cli:main"

[tool.setuptools]
# phisql._generated holds the committed ANTLR-generated lexer/parser/visitor
# (regenerated from the grammar by scripts/generate_parser.sh).
packages = ["phisql", "phisql._generated"]

# Spec catalog and policy schema copied into phisql/_data at build time by
# setup.py (the analogue of the Maven copy-resources executions). Bundling them
# makes the wheel self-contained. NOTE: `python -m build` prints a benign
# "Package 'phisql._data.spec' is absent from the packages configuration"
# warning because setuptools scans the data subdirectories; the data is data,
# not importable code, and is shipped correctly. The warning is cosmetic.
[tool.setuptools.package-data]
phisql = [
    "_data/spec/v1.0/catalog/*.yaml",
    "_data/schema/*/schema.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
